Updated sm image path

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -27,7 +27,7 @@
       <meta property="og:url" content="https://gdscvitpune.netlify.app" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="DSC VIT Pune" />
-      <meta property="og:image" content="%PUBLIC_URL%/sm_image.png" />
+      <meta property="og:image" content="https://gdscvitpune.netlify.app/sm_image.png" />
       <meta property="og:site_name" content="DSC VIT Pune" />
       
       <!-- Twitter Meta Tags -->
@@ -35,7 +35,7 @@
       <meta property="twitter:domain" content="gdscvitpune.netlify.app">
       <meta property="twitter:url" content="https://gdscvitpune.netlify.app/">
       <meta name="twitter:title" content="DSC VIT Pune">
-      <meta name="twitter:image" content="%PUBLIC_URL%/sm_image.png">
+      <meta name="twitter:image" content="https://gdscvitpune.netlify.app/sm_image.png">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
